--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/64f3718a36.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
   <title>Curriculum Vitae - João da Silva</title>
 </head>
 
 <body>
   <header>
     <div class="log">
-      <img src="" alt="Logotipo">
+      <img src="img\html5-brands.svg" alt="">
       <p>Curriculum Vitae</p>
   </div>
   <div class="foto">
@@ -54,7 +55,7 @@
   </section>
   <footer>
     <div class="infsociais">
-      <img src="" alt="Icone do Endereço">
+      <img src="img\map-solid.svg" alt="Icone do Endereço">
       <a href=""></a>"Rua José Texeira da Silva, 180 </a>
       <img src="" alt="Icone do Telefone">
       <a href="">83987597871 </a>
